--- a/pom.xml
+++ b/pom.xml
@@ -55,17 +55,19 @@
 	</dependencyManagement>
 
 	<dependencies>
+		<!-- 
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
+		</dependency>
+		 -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -84,6 +86,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>console-game</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
